--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
-
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     </head>
 
     <body>
@@ -25,9 +25,17 @@
             </ul>
           </div>
       </nav>
+      <div class="" id="slider">
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/1080x300"></a>
+      </div>
+
+      <button type="button" name="button" class="red">Press me</button>
+      <div class="" id="add">
 
 
+      </div>
       <!--JavaScript at end of body for optimized loading-->
       <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript" src="js/script.js"></script>
     </body>
   </html>
