--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -15,27 +11,29 @@
       <h1>Martin Vargas-Vega</h1>
       <nav>
           <div class="nav-wrapper">
-            <a href="#" class="brand-logo right">Mtech</a>
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <a href="#" class="">Mtech</a>
+            <ul id="" class="">
               <li><a href="#">Projects</a></li>
               <li><a href="#">About Me</a></li>
               <li><a href="#">Resume</a></li>
-              <li><a href="#"> Contact Me </a></li>
-
+              <li><a href="#">Contact Me</a></li>
             </ul>
           </div>
       </nav>
+
       <div class="" id="slider">
         <a href="https://placeholder.com"><img src="https://via.placeholder.com/1080x300"></a>
       </div>
 
-      <button type="button" name="button" class="red">Press me</button>
+      <div>
+            <button type="button" name="button" class="red">Press me</button>
+      </div>
+
       <div class="" id="add">
 
 
       </div>
       <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
       <script type="text/javascript" src="js/script.js"></script>
     </body>
   </html>
