Created a the index,contatct,about,portfolio, and resume page

--- a/index.html
+++ b/index.html
@@ -1,39 +1,29 @@
-
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
-    </head>
-
-    <body>
-      <h1>Martin Vargas-Vega</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <title>Martín Vargas-Vega</title>
+  </head>
+  <body>
+    <div class="">
       <nav>
-          <div class="nav-wrapper">
-            <a href="#" class="">Mtech</a>
-            <ul id="" class="">
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">About Me</a></li>
-              <li><a href="#">Resume</a></li>
-              <li><a href="#">Contact Me</a></li>
-            </ul>
-          </div>
+        <ul>
+          <li>Home</li>
+          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
+          <li>Portfolio</li>
+          <li>Resume</li>
+          <li>Contact</li>
+        </ul>
+        <ul>
+          <li>Linkedin</li>
+          <li>Email</li>
+          <li>Github</li>
+        </ul>
       </nav>
+    </div>
+    <h1>Martín Website</h1>
 
-      <div class="" id="slider">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/1080x300"></a>
-      </div>
-
-      <div>
-            <button type="button" name="button" class="red">Press me</button>
-      </div>
-
-      <div class="" id="add">
-
-
-      </div>
-      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/script.js"></script>
-    </body>
-  </html>
+  </body>
+</html>
