--- a/index.html
+++ b/index.html
@@ -12,18 +12,24 @@
         <ul>
           <li>Home</li>
           <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
-          <li>Portfolio</li>
-          <li>Resume</li>
+          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
+          <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
           <li>Contact</li>
         </ul>
         <ul>
-          <li>Linkedin</li>
+          <li><a href="https://www.linkedin.com/in/martinvargasvega/">Linkedin</a></li>
           <li>Email</li>
-          <li>Github</li>
+          <li><a href="https://github.com/mvargasvega">Github</a></li>
         </ul>
       </nav>
     </div>
-    <h1>Martín Website</h1>
+    <div class="">
+      <h1>Martín Vargas-Vega Website</h1>
+      <a href="https://placeholder.com"><img src="https://via.placeholder.com/500x500?text=Martin+Photo" alt=""></a>
+    </div>
+
+    <footer>
+    </footer>
 
   </body>
 </html>
