--- a/index.html
+++ b/index.html
@@ -6,34 +6,38 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <!-- Import Font Awesome Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
     <title>Martín Vargas-Vega</title>
   </head>
   <body>
-    <div class="">
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
-          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
-          <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
-          <li>Contact</li>
-        </ul>
-        <ul>
-          <li><a href="https://www.linkedin.com/in/martinvargasvega/">Linkedin</a></li>
-          <li>Email</li>
-          <li><a href="https://github.com/mvargasvega">Github</a></li>
-        </ul>
+    <div class="container">
+      <nav class="indigo darken-2">
+          <ul>
+            <li>Home</li>
+            <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
+            <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
+            <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
+            <li>Contact</li>
+          </ul>
+          <ul>
+            <a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a>
+            <a><i class = "material-icons">email</i></a>
+            <a><i class="fas fa-envelope"></i></a>
+            <a href="https://github.com/mvargasvega">Github</a>
+          </ul>
       </nav>
-    </div>
-    <div class="">
-      <h1>Martín Vargas-Vega Website</h1>
+
+
+      <h3>Martín Vargas-Vega Website</h3>
       <a href="https://placeholder.com"><img src="https://via.placeholder.com/500x500?text=Martin+Photo" alt=""></a>
     </div>
 
-    <footer>
-    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   </body>
 </html>
