--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
     <title>Martín Vargas-Vega</title>
   </head>
   <body>
+    <nav class="nav-wraper indigo">
+      <div class="container">
+        <a href="#" class="brand-logo">Martín Vargas-Vega</a>
+        <ul class="right">
+          <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a></li>
+          <li><a><i class="fas fa-envelope"></i></a></li>
+          <li><a href="https://github.com/mvargasvega"><i class="fab fa-github-square"></i></a></li>
+        </ul>
+        <ul class="right">
+          <li>Home</li>
+          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
+          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
+          <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
+          <li>Contact</li>
+        </ul>
+
+      </div>
+    </nav>
+
+
     <div class="container">
-      <nav class="indigo darken-2">
-          <ul>
-            <li>Home</li>
-            <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
-            <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
-            <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
-            <li>Contact</li>
-          </ul>
-          <ul>
-            <a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a>
-            <a><i class = "material-icons">email</i></a>
-            <a><i class="fas fa-envelope"></i></a>
-            <a href="https://github.com/mvargasvega">Github</a>
-          </ul>
-      </nav>
+
 
 
       <h3>Martín Vargas-Vega Website</h3>
