Added mobile html and will work on the Javascript portion of it

--- a/index.html
+++ b/index.html
@@ -9,33 +9,38 @@
       <!-- Import Font Awesome Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
-    <title>Martín Vargas-Vega</title>
+    <title>Martín Vargas-Vega - The Latinx Developer</title>
   </head>
   <body>
     <nav class="nav-wraper indigo">
       <div class="container">
         <a href="#" class="brand-logo">Martín Vargas-Vega</a>
-        <ul class="right">
-          <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a></li>
-          <li><a><i class="fas fa-envelope"></i></a></li>
-          <li><a href="https://github.com/mvargasvega"><i class="fab fa-github-square"></i></a></li>
-        </ul>
-        <ul class="right">
-          <li>Home</li>
+        <a href="#" class="sidebar-trigger">
+            <i class="material-icons">menu</i>
+        </a>
+        <ul class="right hide-on-med-and-down">
           <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
           <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
           <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
           <li>Contact</li>
+          <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a></li>
+          <li><a><i class="fas fa-envelope"></i></a></li>
+          <li><a href="https://github.com/mvargasvega"><i class="fab fa-github-square"></i></a></li>
         </ul>
-
       </div>
     </nav>
+    <ul class="sidenav" id="mobile-links">
+      <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
+      <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
+      <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
+      <li>Contact</li>
+      <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a></li>
+      <li><a><i class="fas fa-envelope"></i></a></li>
+      <li><a href="https://github.com/mvargasvega"><i class="fab fa-github-square"></i></a></li>
 
+    </ul>
 
     <div class="container">
-
-
-
       <h3>Martín Vargas-Vega Website</h3>
       <a href="https://placeholder.com"><img src="https://via.placeholder.com/500x500?text=Martin+Photo" alt=""></a>
     </div>
