Added jquery event for mobile nav links. Changed routes to links for web pages

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
       <!-- Import Font Awesome Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
+
+    </script>
     <title>Martín Vargas-Vega - The Latinx Developer</title>
   </head>
   <body>
-    <nav class="nav-wraper indigo">
-      <div class="container">
+    <nav class=" indigo">
+      <div class="container nav-wraper">
         <a href="#" class="brand-logo">Martín Vargas-Vega</a>
-        <a href="#" class="sidebar-trigger">
-            <i class="material-icons">menu</i>
-        </a>
+        <a href="#" class="sidenav-trigger" data-target = "mobile-demo"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
-          <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
           <li>Contact</li>
           <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a></li>
@@ -29,7 +29,8 @@
         </ul>
       </div>
     </nav>
-    <ul class="sidenav" id="mobile-links">
+
+    <ul class="sidenav" id="mobile-demo">
       <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
       <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
       <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
@@ -41,7 +42,7 @@
     </ul>
 
     <div class="container">
-      <h3>Martín Vargas-Vega Website</h3>
+      <h3>Welcome to my site</h3>
       <a href="https://placeholder.com"><img src="https://via.placeholder.com/500x500?text=Martin+Photo" alt=""></a>
     </div>
 
@@ -49,6 +50,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
