Fixed styling on contact link for mobile

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="about.html">About</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
-          <li>Contact</li>
-          <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin"></i></a></li>
           <li><a><i class="fas fa-envelope"></i></a></li>
           <li><a href="https://github.com/mvargasvega"><i class="fab fa-github-square"></i></a></li>
         </ul>
@@ -34,11 +34,10 @@
       <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/about.html">About</a></li>
       <li><a href="/Users/admin/Desktop/Martin-Code/M_Website/portfolio.html">Portfolio</a></li>
       <li><a href="https://drive.google.com/file/d/1TQi3m44fa4PL1KRRbdiSNIb7kOaIWq55/view?usp=sharing">Resume</a></li>
-      <li>Contact</li>
+      <li><a href="#">Contact</a></li>
       <li><a href="https://www.linkedin.com/in/martinvargasvega/"><i class="fab fa-linkedin" href="google.com"></i></a></li>
       <li><a><i class="fas fa-envelope"></i></a></li>
       <li><a href="https://github.com/mvargasvega"><i class="fab fa-github-square"></i></a></li>
-
     </ul>
 
     <div class="container">
